<?xml version="1.0" encoding="utf-8"?>
<skily_leyu.sixbox.widget.CustomTouchLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ipSelect"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue"
    tools:context=".IpSelectActivity">

    <TextView
        android:id="@+id/ipSelect_001"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipSelect_001"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:layout_marginTop="100dp"
        style="@style/SixBoxTitle"
        />

    <TextView
        android:id="@+id/ipSelect_011"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipSelect_001"
        android:layout_marginTop="20dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:text="@string/ipSelect_008"
        style="@style/SixBoxText"
    />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ipSelect_002"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ipSelect_011"
        android:layout_marginTop="140dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:id="@+id/ipSelect_003"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipSelect_003"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/SixBoxLabel"
            />

        <EditText
            android:id="@+id/ipSelect_007"
            android:autofillHints="@string/ipSelect_002"
            app:layout_constraintLeft_toRightOf="@+id/ipSelect_003"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/ipSelect_002"
            style="@style/SixBoxTextField"
            />

        <TextView
            android:id="@+id/ipSelect_012"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ipSelect_007"
            app:layout_constraintLeft_toLeftOf="@id/ipSelect_007"
            style="@style/SixBoxErrorText"
            android:paddingStart="15dp"
            android:paddingEnd="40dp"
            android:text="@string/ipSelect_009"
            android:visibility="invisible"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ipSelect_004"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipSelect_002"
        android:layout_marginTop="10dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <TextView
            android:id="@+id/ipSelect_005"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ipSelect_004"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            style="@style/SixBoxLabel"
            />

        <EditText
            android:id="@+id/ipSelect_006"
            android:autofillHints="@string/ipSelect_005"
            app:layout_constraintLeft_toRightOf="@+id/ipSelect_005"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:hint="@string/ipSelect_005"
            style="@style/SixBoxTextField"
            />

        <TextView
            android:id="@+id/ipSelect_013"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ipSelect_006"
            app:layout_constraintLeft_toLeftOf="@id/ipSelect_006"
            style="@style/SixBoxErrorText"
            android:paddingStart="15dp"
            android:paddingEnd="40dp"
            android:text="@string/ipSelect_011"
            android:visibility="invisible"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ipSelect_008"
        android:layout_width="0dp"
        android:layout_height="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ipSelect_004"
        android:layout_marginTop="100dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp">

        <android.widget.Button
            android:id="@+id/ipSelect_010"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/ipSelect_007"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:minWidth="120dp"
            style="@style/SixBoxButton"
            />



        <android.widget.Button
            android:id="@+id/ipSelect_009"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/ipSelect_006"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:minWidth="120dp"
            style="@style/SixBoxButton"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <FrameLayout
        android:id="@+id/ipSelect_014"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true"
        >
        <View
            android:id="@+id/ipSelect_015"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#80FFFFFF" />

        <ProgressBar
            android:id="@+id/ipSelect_016"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center" />
    </FrameLayout>
</skily_leyu.sixbox.widget.CustomTouchLayout>